# libmpxtn

./: .gitignore  CMakeLists.txt
src/: common.h  delay.c  delay.h  descriptor.c  descriptor.h  error.c  error.h  evelist.c  evelist.h  freq.c  freq.h  libmpxtn.map  master.c  master.h  mpxtn.c  mpxtn.h  ogg.c  ogg.h  oscillator.c  oscillator.h  overdrive.c  overdrive.h  pcm.c  pcm.h  ptn.c  ptn.h  ptn_tbl.c  ptv.c  ptv.h  service.c  service.h  unit.c  unit.h  woice.c  woice.h
test/: dummydump.c
win32/: dllmain.c
win32/VS2017/: libmpxtn.sln  libmpxtn.vcxproj  mpxtndump.vcxproj
